[UI] Alignment Fix

--- a/src/clr-angular/forms/datepicker/_datepicker.clarity.scss
+++ b/src/clr-angular/forms/datepicker/_datepicker.clarity.scss
@@ -65,6 +65,7 @@ $clr-calendar-active-cell-color: $clr-white;
 @include exports('datepicker.clarity') {
     .datepicker-container {
         display: inline-flex;
+        align-items: center;
 
         //Other Props
         white-space: nowrap;
